z-index for buttons etc fixed

--- a/style.css
+++ b/style.css
@@ -30,6 +30,8 @@ body::after{
     );
     pointer-events: none;
     mix-blend-mode: multiply; 
+
+    z-index: 100;
 }
 
 /*alla buttons ska ha pointer*/
@@ -105,6 +107,7 @@ p{
     display: none;
 
     cursor: grab;
+    z-index: 1;
 }
 
 /*about me window placering*/
@@ -128,7 +131,8 @@ p{
      button.close{
         color:black;
         position: relative;
-        z-index: 1000; /*fixa*/
+        /* z-index: 1000; fixa */
+        z-index: 10;
     }
 }
 
@@ -279,6 +283,7 @@ p{
             width: 120px;
         }
     }
+
 
 /*References container*/
 #references{
